--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <th>Next Arrival</th>
                         <th>Minutes Away</th>
                     </thead>
-                    <tbody>
+                    <tbody id="train-table">
                     </tbody>
                 </table>
             </div>
